# proton-forge

./: .gitignore  CMakeLists.txt  FLATPAK.md  LICENSE  README.md  RELEASE.md  build-deb.sh  org.protonforge.ProtonForge.desktop  org.protonforge.ProtonForge.metainfo.xml  org.protonforge.ProtonForge.yml  protonforge.desktop.in  resources.qrc  style.qss
.github/workflows/: ci.yml  flatpak-release.yml  release.yml
debian/: control
src/: main.cpp
src/core/: DLSSSettings.cpp  DLSSSettings.h  FeatureGate.cpp  FeatureGate.h  Game.cpp  Game.h  SettingsManager.cpp  SettingsManager.h  Version.h.in
src/launchers/: ILauncher.h  LauncherManager.cpp  LauncherManager.h  SteamLauncher.cpp  SteamLauncher.h
src/network/: ImageCache.cpp  ImageCache.h  ProtonDBClient.cpp  ProtonDBClient.h
src/parsers/: VDFParser.cpp  VDFParser.h
src/runner/: GameRunner.cpp  GameRunner.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AppStyle.h  DLSSSettingsWidget.cpp  DLSSSettingsWidget.h  GPUInfoDialog.cpp  GPUInfoDialog.h  GameListWidget.cpp  GameListWidget.h  MainWindow.cpp  MainWindow.h  MangoHudDialog.cpp  MangoHudDialog.h  OpaqueTooltip.h  ProtonVersionDialog.cpp  ProtonVersionDialog.h  RecommendationsDialog.cpp  RecommendationsDialog.h  SettingsDialog.cpp  SettingsDialog.h  SystemInfoDialog.cpp  SystemInfoDialog.h
src/utils/: CPUDetector.cpp  CPUDetector.h  EnvBuilder.cpp  EnvBuilder.h  GPUDetector.cpp  GPUDetector.h  GpuInfoCache.cpp  GpuInfoCache.h  HDRChecker.cpp  HDRChecker.h  LaunchOptionExtractor.cpp  LaunchOptionExtractor.h  NvidiaGPUDetector.cpp  NvidiaGPUDetector.h  ProtonManager.cpp  ProtonManager.h  SteamPaths.cpp  SteamPaths.h
